--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hapi-template",
+  "name": "microservice-index",
   "version": "1.0.0",
   "description": "",
   "main": "app/index.js",
