--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
+    "build": "npm run build:css",
+    "build:css": "sass --load-path=./ app/public/stylesheets",
+    "build:css-watch": "npm run build:css -- --watch",
     "start": "node app/index.js",
     "start:watch": "nodemon --inspect=0.0.0.0 --ext css,js,njk --legacy-watch app/index.js"
   },
@@ -20,10 +23,12 @@
     "joi": "^17.1.1",
     "@hapi/vision": "^6.0.1",
     "blipp": "^4.0.1",
+    "govuk-frontend": "^3.7.0",
     "nunjucks": "^3.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
-    "standard": "^14.3.4"
+    "standard": "^14.3.4",
+    "sass": "^1.26.11"
   }
 }
