--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -4,9 +4,27 @@ services:
     build:
       context: .
       target: development
+    depends_on:
+      - microservice-index-postgres
     ports:
       - "3000:3000"
       - "9229:9229"
+    environment:
+      POSTGRES_HOST: microservice-index-postgres
     volumes:
       - ./app/:/home/node/app/
       - ./package.json:/home/node/package.json
+
+  microservice-index-postgres:
+    image: postgres:11.4-alpine
+    environment:
+      POSTGRES_DB: microservice_index
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data: {}
